syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  uint32 accountID = 1;
  uint32 messageID = 2;
  bytes content = 3;
}

// The response message containing the greetings
message HelloReply {
  uint32 accountID = 1;
  uint32 messageID = 2;
  bytes content = 3;
}
